--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+Copyright 2018 CChaplin
+-->
 <head>
 	<title>An Example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
