--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright 2018 CChaplin
 -->
 <head>
-	<title>An Example website</title>
+	<title>An Example website which is great</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@ Copyright 2018 CChaplin
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some dummy text in content area
 		</p>
 	</main>
 	<footer class="container">
