Adding a conflicting change

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright 2018 CChaplin
 -->
 <head>
-	<title>An Example website</title>
+	<title>Very respectful  website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -21,7 +21,7 @@ Copyright 2018 CChaplin
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; C Chaplin Company 2018</p>
 	</footer>
 </body>
 </html>
