--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 Copyright 2018 CChaplin
+Adding changes before rebase conflicts.
 -->
 <head>
 	<title>Very respectful  website</title>
