fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright 2018 CChaplin
 Some silly changes from master branch
 -->
 <head>
-	<title>Sily change on master</title>
+	<title>Very respectful  website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ Some silly changes from master branch
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just stuff for now, not sure if it makes any sense.. maybe we shoudl replace it
+			Just nothing but trouble
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; C Chaplin Company 2018 - everafter</p>
+		<p>&copy; C Chaplin Company 2018</p>
 	</footer>
 </body>
 </html>
