mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 Copyright 2018 CChaplin
-Adding changes before rebase conflicts.
+Some silly changes from master branch
 -->
 <head>
-	<title>Very respectful  website</title>
+	<title>Sily change on master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ Adding changes before rebase conflicts.
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just stuff for now, not sure if it makes any sense.. maybe we shoudl replace it
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; C Chaplin Company 2018</p>
+		<p>&copy; C Chaplin Company 2018 - everafter</p>
 	</footer>
 </body>
 </html>
