--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@ Copyright 2018 CChaplin
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; C Chaplin Company 2018</p>
+		<p>&copy; C Chaplin Company 2018 - 2020</p>
 	</footer>
 </body>
 </html>
