--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright 2018 CChaplin
 -->
 <head>
-	<title>Very respectful  website</title>
+	<title>Updating title for Stash example </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@ Copyright 2018 CChaplin
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just nothing but trouble
+			Adding more important content here.
 		</p>
 	</main>
 	<footer class="container">
